Bug: Fix Apps Button Overflow Border

--- a/src/App.css
+++ b/src/App.css
@@ -523,6 +523,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .nav-link#projects-tabs-tab-first {
   border: 1px solid rgba(255, 255, 255, 3);
   border-radius: 55px 0px 0px 55px;
+  overflow: hidden;
 }
 .nav-link#projects-tabs-tab-second {
   border-top: 1px solid rgba(255, 255, 255, 3);
